--- a/pages/_includes/main.njk
+++ b/pages/_includes/main.njk
@@ -1,30 +1,32 @@
-{%-set data = tableauCovidMetrics[0] -%}
 {%-set dataYesterday = tableauCovidMetrics[1] -%}
 {%-set data2 = dailyStatsV2.data -%}
-{%-set _varStatDate_ = data.DATE | formatDate2(false, tags, 1)-%}
-{%-set _varStatTotalCases_ = data.TOTALCONFIRMED | formatNumber(tags)-%}
-{%-set _varStatTotalCasesToday_ = data.TOTALCONFIRMED_DAILY | formatNumber(tags)-%}
-{%-set _varStatTotalCasesTodayPct_ = (100*data.TOTALCONFIRMED_DAILYPCTCHG) | formatNumber(tags,1)-%}
-{%-set _varCasesTrend_ = 100*(data.TOTALCONFIRMED_DAILYPCTCHG - dataYesterday.TOTALCONFIRMED_DAILYPCTCHG) -%}
 
-{%-set _varStatTotalDeaths_ = data.NUMBERDIED | formatNumber(tags)-%}
-{%-set _varStatTotalDeathsToday_ = data.NUMBERDIED_DAILY | formatNumber(tags)-%}
-{%-set _varStatTotalDeathsChange_ = (100*data.NUMBERDIED_DAILYPCTCHG) | formatNumber(tags,1)-%}
-{%-set _varDeathsTrend_ = 100*(data.NUMBERDIED_DAILYPCTCHG - dataYesterday.NUMBERDIED_DAILYPCTCHG) -%}
+{%-set _varStatDate_ = data2.cases.DATE | formatDate2(false, tags, 1)-%}
+{%-set _varStatTotalCases_ = data2.cases.LATEST_TOTAL_CONFIRMED_CASES | formatNumber(tags)-%}
+{%-set _varStatTotalCasesToday_ = data2.cases.NEWLY_REPORTED_CASES | formatNumber(tags)-%}
+{%-set _varStatNewCasesPer100k_ = (data2.cases.LATEST_CONFIDENT_AVG_CASE_RATE_PER_100K_7_DAYS) | formatNumber(tags,1)-%}
+{%-set _varCasesTrend_ = data2.cases.LATEST_CONFIDENT_INCREASE_CASE_RATE_PER_100K_7_DAYS %}
 
-{%-set _varStatTested_ = data.TESTED | formatNumber(tags)-%}
-{%-set _varStatTestedDaily_ = data.TESTED_DAILY | formatNumber(tags)-%}
-{%-set _varStatTestedDailyPct_ = (100*data.TESTED_DAILYPCTCHG) | formatNumber(tags,1)-%}
-{%-set _varTestedTrend_ = 100*(data.TESTED_DAILYPCTCHG - dataYesterday.TESTED_DAILYPCTCHG) -%}
+{%-set _varStatTotalDeaths_ = data2.deaths.LATEST_TOTAL_CONFIRMED_DEATHS | formatNumber(tags)-%}
+{%-set _varStatTotalDeathsToday_ = data2.deaths.NEWLY_REPORTED_DEATHS | formatNumber(tags)-%}
+{%-set _varStatNewDeathsPer100k_ = (data2.deaths.LATEST_CONFIDENT_AVG_DEATH_RATE_PER_100K_7_DAYS) |
+formatNumber(tags,1)-%}
+{%-set _varDeathsTrend_ = data2.deaths.LATEST_CONFIDENT_INCREASE_DEATH_RATE_PER_100K_7_DAYS %}
+
+{%-set _varStatTested_ = data2.tests.LATEST_TOTAL_TESTS_PERFORMED | formatNumber(tags)-%}
+{%-set _varStatTestedDaily_ = data2.tests.NEWLY_REPORTED_TESTS | formatNumber(tags)-%}
+{%-set _varStatLatestPositivityPct_ = (100*data2.tests.LATEST_CONFIDENT_POSITIVITY_RATE_7_DAYS) |
+formatNumber(tags,1)-%}
+{%-set _varPositivityTrend_ = data2.tests.LATEST_CONFIDENT_INCREASE_POSITIVITY_RATE_7_DAYS %}
 
 {%-set _varStatVaccines_ = data2.vaccinations.CUMMULATIVE_DAILY_DOSES_ADMINISTERED | formatNumber(tags)-%}
 
-{%-set _varCasesTrendClassU_        = '' if _varCasesTrend_ >= 0 else "d-none" %}
-{%-set _varDeathsTrendClassU_       = '' if _varDeathsTrend_ >= 0 else "d-none" %}
-{%-set _varTestedTrendClassU_       = '' if _varTestedTrend_ >= 0 else "d-none" %}
-{%-set _varCasesTrendClassD_        = '' if _varCasesTrend_  < 0 else "d-none" %}
-{%-set _varDeathsTrendClassD_       = '' if _varDeathsTrend_ < 0 else "d-none" %}
-{%-set _varTestedTrendClassD_       = '' if _varTestedTrend_ < 0 else "d-none" %}
+{%-set _varCasesTrendClassU_ = '' if _varCasesTrend_ >= 0 else "d-none" %}
+{%-set _varDeathsTrendClassU_ = '' if _varDeathsTrend_ >= 0 else "d-none" %}
+{%-set _varPositivityTrendClassU_ = '' if _varPositivityTrend_ >= 0 else "d-none" %}
+{%-set _varCasesTrendClassD_ = '' if _varCasesTrend_ < 0 else "d-none" %} 
+{%-set _varDeathsTrendClassD_='' if _varDeathsTrend_ < 0 else "d-none" %} 
+{%-set _varPositivityTrendClassD_='' if _varPositivityTrend_ < 0 else "d-none" %} 
 
 {% extends "layout.njk" %}
 {% import "macros.njk" as macros %}
@@ -100,7 +102,8 @@
 										s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"/>
 									</svg>
 								</span> 
-								{{_varStatTotalCasesTodayPct_}}% <span class="text-300">increase from prior day total</span></div>
+								{{_varStatNewCasesPer100k_}} <span class="text-300">new cases per 100K</span>
+								</div>
 							</div>
 						</div>
 						<div class="col-md-6 px-10px">
@@ -126,7 +129,8 @@
 										s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"/>
 									</svg>
 								</span> 
-								{{_varStatTotalDeathsChange_}}% <span class="text-300">increase from prior day total</span></div>
+								{{_varStatNewDeathsPer100k_}} <span class="text-300">new deaths per 100K</span>
+								</div>
 							</div>
 						</div>
 						<div class="col-md-6 px-10px">
@@ -137,7 +141,7 @@
 								<div id="total-tested-today" class="text-white font-size-1-2em mt-2"><strong>{{_varStatTestedDaily_}}</strong> <span class="text-300">today</span></div>
 								<div id="total-tested-increase" class="text-white text-xs line-height-1-5 my-2">
 								<span class="chart-arrow" arria-hidden="true">
-								    <svg class="{{ _varTestedTrendClassU_ }}" version="1.1" id="arrow-up3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">
+								    <svg class="{{ _varPositivityTrendClassU_ }}" version="1.1" id="arrow-up3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">
 									<path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
 										l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
 										l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
@@ -145,14 +149,15 @@
 									</svg>
 
 									<!--negative arrow-->
-									<svg class="{{ _varTestedTrendClassD_ }}" version="1.1" id="arrow-down3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">
+									<svg class="{{ _varPositivityTrendClassD_ }}" version="1.1" id="arrow-down3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">
 									<path class="chart-arrow-path" d="M28.11,21.4c0,0.62-0.5,1.13-1.13,1.13h-7.64c-0.62,0-1.13-0.5-1.13-1.13s0.5-1.13,1.13-1.13h5.05l-8.16-8.25
 										l-4.89,4.89c-0.44,0.44-1.15,0.44-1.59,0L0.9,8.07c-0.44-0.44-0.44-1.15,0-1.59c0.22-0.22,0.51-0.33,0.8-0.33s0.58,0.11,0.8,0.33
 										l8.05,8.05l4.89-4.89c0.21-0.21,0.5-0.33,0.8-0.33c0,0,0,0,0,0c0.3,0,0.59,0.12,0.8,0.33l8.82,8.91v-4.68c0-0.62,0.5-1.13,1.13-1.13
 										s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"/>
 									</svg>
 								</span> 
-								{{_varStatTestedDailyPct_}}% <span class="text-300">increase from prior day total</span></div>
+								{{_varStatLatestPositivityPct_}}% <span class="text-300">test positivity</span>
+								</div>
 							</div>
 						</div>
 						<div class="col-md-6 px-10px">
