--- a/pages/_includes/search.njk
+++ b/pages/_includes/search.njk
@@ -49,16 +49,47 @@
 	const myWebSearchStartingCallback = query => {
 		if(!query) return;
 
+		let test_intl = false;
+
 		let currentHost = `${window.location.protocol}//${window.location.hostname}`;
 		if(window.location.port !== '80') {
 			currentHost += `:${window.location.port}`;
 		}
 		history.pushState(null,null,`${currentHost}${window.location.pathname}?q=${query}`);
 		document.querySelector('#answersNow').innerHTML = "";
-		fetch(`https://fa-go-alph-covidqna-001.azurewebsites.net/CovidAnswer?q=${query}&name=123`)
+
+		let search_url = `https://fa-go-alph-covidqna-001.azurewebsites.net/CovidAnswer?q=${query}&name=123`;
+		let = my_language = document.documentElement.lang;
+		if (test_intl) {
+			// replace search url
+			console.log("Test INTL Search");
+			search_url = 'https://qa-go-covid-001.azurewebsites.net/qnamaker/knowledgebases/7c68948f-06d8-4c18-aa71-c7340e32f34f/generateAnswer';
+		}
+
+		// fetch(search_url)
+		fetch(search_url
+		              {# , {
+                        method: 'POST',
+                        headers: {
+                          'Content-Type': 'application/json',
+                          "Authorization": "EndpointKey c1b8855b-2919-47ec-9387-6d9cc64dcb41"
+                        },
+                        redirect: 'follow', 
+                        body: JSON.stringify({'question':q, 'top': 200})
+                      } #}
+					  )
 		.then(response => response.json())
 		.then(data => {
 			let answers = [...data[0].answers];
+			console.log("Got Answers",answers);
+			if (my_language == 'en-US') {
+				// Eliminate all questions with a non-english source
+				const skip_pattern = /^https:\/\/covid19.ca.gov\/(es|ar|ko|tl|vi|zh-hans|zh-hant)\//;
+                answers = answers.filter( ans => !(ans.source.match(skip_pattern)));
+			} else if (my_language.match(/^(es|ar|ko|tl|vi|zh-hans|zh-hant)$/)) {
+				const match_pattern = eval(`/^https:\/\/covid19.ca.gov\/${my_language}\//`);
+                answers = answers.filter( ans => (ans.source.match(match_pattern)));
+			}
 			if(answers[0].questions.length > 0) {
 				let html = `<h4>Quick answers</h4>
 					${answers.map(function(a) {
